# Finance-Manager

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
Dashboard/: CMakeLists.txt  dashboard.cpp  dashboard.h  home.cpp  home.h  icons.qrc
Database/: CMakeLists.txt  database.cpp  database.h
